[package]
name = "cosmic-randr"
version = "0.1.0"
description = "high level library for wayland output configuration"
license = "MPL-2.0"
edition = "2021"

[dependencies]
futures-lite = "2.6.0"
tachyonix = "0.3.1"
thiserror = "1.0.69"
tokio = { version = "1.43.0", features = ["net"] }
tracing = "0.1.41"
wayland-client = "0.31.7"
wayland-protocols-wlr = { version = "0.3.5", features = [ "client", "wayland-client" ] }
cosmic-protocols = { git = "https://github.com/pop-os/cosmic-protocols.git" }
indexmap = "2.7.0"
