[package]
name = "cosmic-randr"
version = "0.1.0"
description = "high level library for wayland output configuration"
license = "MPL-2.0"
edition = "2024"

[dependencies]
cosmic-protocols = { git = "https://github.com/pop-os/cosmic-protocols.git" }
indexmap = "2.12.1"
thiserror = "2.0.17"
tokio = { version = "1.48.0", default-features = false, features = ["net", "sync"] }
tracing = "0.1.43"
wayland-client = "0.31.11"
wayland-protocols-wlr = { version = "0.3.9", features = [ "client", "wayland-client" ] }

[dev-dependencies]
tokio = { version = "1.48.0", features = ["macros", "rt",] }
